# doc-archive

./: .gitignore  404.html  README.md  config.toml  environment.yml  index.html  index.xml  mkdocs.yml  pyproject.toml  serve_locally.bat  sitemap.xml  update_docsy.bat
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/workflows/: ci.yml  gh-pages.yml
categories/: index.html  index.xml
content/zh/: _index.html
docarchive/: modify_pluto_html.py
docker/: README.md  build.sh
docs/: index.html  index.md  index.xml
docs/best-practice/: git.md
docs/best-practices/: index.html  index.xml
docs/javascripts/: config.js
docs/learning/: inverse_problem.md  scientific_computing.md
docs/learning-resources/: index.html  index.xml
docs/magtip/: index.html  index.xml
docs/notebooks/: test.md
docs/stylesheets/: extra.css
docs/tools/: geoscience.md  index.html  index.xml
en/: index.html  sitemap.xml
js/: main.min.132d51d6b4dff4953e0457236ac11b165c299319229bdb74b949e689bf7d3670.js  main.min.2f5ee13a6b7997022a5ba300b29ea23e2f424c7f6e6dd9a6e85aa3237b1a4393.js  main.min.68287c4f7a70d6724b6fe322c5ced9366666ca66622315822ae11fbcb5e822f4.js  main.min.cc069f17a2f2afe7152bcafc220ad2b2ace2198673cc8b533342fe93b898ad2e.js
log/: index.html  index.xml
log/ai-soil-wet/: index.html  index.xml
search/: index.html
tags/: index.html  index.xml
zh/: 404.html  index.html  index.xml  sitemap.xml
zh/categories/: index.html  index.xml
zh/docs/: index.html  index.xml
zh/search/: index.html
zh/tags/: index.html  index.xml
(+64 files in other folders)
