[tool.poetry]
name = "docarchive"
version = "0.1.0"
description = ""
authors = ["Zheng-Kai Ye <supon3060@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^7.1.8"
mkdocs-minify-plugin = "^0.4.0"
mkdocs-git-revision-date-localized-plugin = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
